ATLAS-200: add additional check if only ValidTo or only validFrom is edited